make alert & fix align popout

--- a/src/components/PopoutWrapper/PopoutWrapper.sass
+++ b/src/components/PopoutWrapper/PopoutWrapper.sass
@@ -59,6 +59,9 @@
   .vc-PopoutWrapper__container
     justify-content: center
 
+  .vc-PopoutWrapper__in
+    display: flex
+    justify-content: center
 
 .vc-PopoutWrapper--h-left
   .vc-PopoutWrapper__container
